# Y2B25_Task_11

./: LocalTest.py  README.md  aaron_ot2_gym_wrapper.py  aaron_ot2_gym_wrapper_curriculum.py  aaron_ot2_wrapper.py  aaron_plain_ot2_gym_wrapper.py  aaron_plain_train_ot2.py  aaron_train_ot2.py  alex_ot2_gym_wrapper.py  alex_train_ot2.py  example_ot2_gym_wrapper.py  filipp_ot2_gym_wrapper.py  filipp_train_ot2.py  filipp_train_ot2_LEVEL23.py  filipp_wrapper_multiobjective.py  filipp_wrapper_potential.py  filipp_wrapper_progressive.py  filipp_wrapper_simple.py  filipp_wrapper_sparse.py  requirements.txt  runner_ot2.py  test.py  test_execution.py  test_imports.py  test_wrapper_datatypes.py  train_ot2.py  viktor_ot2_gym_wrapper.py  viktor_train_ot2.py  yuliia_train_ot2.py
npec_rl/: pyproject.toml
npec_rl/src/: nick_ot2_optimizer.py  nick_train_ot2.py
